<resources>
    <string-array name="custom_weekdays">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>
    <string-array name="custom_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>
    <string name="app_name">Pome</string>
    <string name="bottom_nav_menu_record_title">기록</string>
    <string name="bottom_nav_menu_remind_title">회고</string>
    <string name="bottom_nav_menu_friend_title">친구</string>
    <string name="bottom_nav_menu_mypage_title">마이</string>
    <string name="splash_marshmallow_background_image_description">Splash marshmallow background</string>
    <string name="splash_marshmallow_3d_image_description">splash marshmallow 3d image description</string>
    <string name="splash_logo_image_description">splash logo image description</string>
    <string name="splash_marshmallow_is_yours_image_description">splash marshmallow is yours image description</string>
    <string name="login_start_btn_text">시작하기</string>
    <string name="register_title_text">나만의 프로필을\n만들어 볼까요?</string>
    <string name="register_profile_name_hint_text">영어, 한국어 최대 10자 이내 입력</string>
    <string name="register_profile_name_button_text">만들었어요</string>
    <string name="register_profile_check_description_text">입력한 정보는 회원을 식별하고 친구간 커뮤니케이션을 위한 동의 목적으로만 사용되며 포미 이용기간 동안 보관돼요</string>
    <string name="pome_bottom_sheet_dialog_delete_text">삭제하기</string>
    <string name="pome_bottom_sheet_dialog_pencil_text">수정하기</string>
    <string name="pome_bottom_sheet_dialog_title_text">프로필 편집</string>
    <string name="pome_name_check_impossible_text">사용할 수 없는 닉네임이에요</string>
    <string name="pome_name_check_possible_text">멋진 닉네임이네요!</string>
    <string name="add_friends_notice_title_text">회원가입 완료!\n친구를 추가해볼까요?</string>
    <string name="add_friends_notice_desc_text">친구의 소비 기록을 확인하고\n서로 응원할 수 있어요</string>
    <string name="add_friends_notice_check_false_text">다음에 할래요</string>
    <string name="add_friends_title_text">타이틀</string>
    <string name="add_friends_name_hint_text">친구의 닉네임을 검색해보세요</string>
    <string name="add_friends_check_btn_text">완료했어요</string>
    <string name="add_friends_list_add_complete_text">추가완료</string>
    <string name="add_friends_no_search_desc_text">검색 결과가 없어요\n다른 닉네임으로 검색해볼까요?</string>
    <string name="remind_goal_card_no_text">아직 추가한 목표가 없어요.</string>
    <string name="remind_review_title_text">씀씀이 돌아보기</string>
    <string name="remind_review_initial_text">초기화</string>
    <string name="remind_no_review_text">아직 돌아본 씀씀이가 없어요</string>
    <string name="remind_review_first_emotion_text">처음 감정</string>
    <string name="remind_review_last_emotion_text">돌아본 감정</string>
    <string name="remind_dialog_happy_text">행복해요</string>
    <string name="remind_dialog_what_text">모르겠어요</string>
    <string name="remind_dialog_sad_text">후회해요</string>
    <string name="register_name_text">이름</string>
    <string name="register_name_hint_text">이름을 입력해주세요</string>
    <string name="register_phone_title_text">휴대전화 번호</string>
    <string name="register_phone_hint_text">- 없이 숫자만 입력해주세요</string>
    <string name="register_cert_phone_btn_text">인증 요청</string>
    <string name="register_cert_title_text">인증 번호</string>
    <string name="register_cert_num_hint_text">인증번호를 입력해주세요</string>
    <string name="register_agree_btn_text">동의하고 시작하기</string>
    <string name="register_agree_desc_text">인증번호가 오지 않나요?</string>
    <string name="register_terms_title_text">포미를 이용하려면\n아래 약관에 동의해주세요</string>
    <string name="register_terms_all_agree_text">전체 동의</string>
    <string name="register_agree_using_terms_text"><u>이용 약관 동의 (필수)</u></string>
    <string name="register_agree_privacy_text"><u>개인정보 수집 및 이용 동의 (필수)</u></string>
    <string name="register_agree_marketing_text"><u>마케팅 정보 수집 동의 (선택)</u></string>
    <string name="register_terms_agree_button_text">동의했어요</string>
    <string name="record_no_goal_title_text">목표를 세워 친구와 \n마시멜로를 모아보세요!</string>
    <string name="record_no_goal_subtitle_text">목표 만들기</string>
    <string name="record_goal_used_amount_title_text">사용 금액</string>
    <string name="friend_all_text">전체</string>
    <string name="friend_profile_name">성식</string>
    <string name="friend_not_text">아직 추가한 친구가 없어요</string>
    <string name="friend_bottom_text">더보기</string>
    <string name="friend_bottom_hide_text">숨기기</string>
    <string name="friend_bottom_report_text">신고하기</string>
    <string name="mypage_main_goal_text">목표 보관함</string>
    <string name="mypage_main_last_goal_text">다시 보고 싶은 지난 목표가 %d건 있어요</string>
    <string name="mypage_marshmallow_text">마시멜로 모으기</string>
    <string name="mypage_goal_text">완료한 목표</string>
    <string name="mypage_goal_not_text">저장된 목표가 없어요</string>
    <string name="goal_trash_text">종료된 목표를 삭제하시겠어요?</string>
    <string name="goal_trash_all_text">지금까지 작성한 기록들은 모두 사라져요</string>
    <string name="goal_trash_all_not_text">아니요</string>
    <string name="goal_trash_all_okay_text">삭제할래요</string>
    <string name="mypage_setting_title_text">설정</string>
    <string name="mypage_setting_friend_text">친구 관리</string>
    <string name="mypage_setting_question_text">문의 하기</string>
    <string name="mypage_setting_alarm_text">알림 설정</string>
    <string name="mypage_setting_report_text">신고 하기</string>
    <string name="mypage_setting_service_text">서비스</string>
    <string name="mypage_setting_policy_text">약관 및 정책</string>
    <string name="mypage_setting_open_source_text">오픈소스 라이센스</string>
    <string name="mypage_setting_version_text">버전 정보</string>
    <string name="mypage_setting_logout_text">로그아웃</string>
    <string name="mypage_setting_withdraw_text">탈퇴하기</string>
    <string name="mypage_withdraw_reason_text">계정을 삭제하려는 이유가 궁금해요</string>
    <string name="mypage_withdraw_know_text">불편하셨던 점을 알려주시면\n더 나은 서비스를 위해 노력하겠습니다.</string>
    <string name="mypage_withdraw_reason_1_text">기록이 귀찮아요</string>
    <string name="mypage_withdraw_reason_2_text">알람이 너무 많이와요</string>
    <string name="mypage_withdraw_reason_3_text">억울하게 이용이 제한됐어요</string>
    <string name="mypage_withdraw_reason_4_text">새 계정을 만들고 싶어요</string>
    <string name="mypage_withdraw_warning_text">%s님 잠깐만요!\n삭제하기 전에 읽어보세요.</string>
    <string name="mypage_withdraw_warning_point_text">  ·  </string>
    <string name="mypage_withdraw_warning_1_text">모든 게시글 및 채팅방이 삭제돼요</string>
    <string name="mypage_withdraw_warning_2_text">계정이 삭제 된 후에는 계정을 다시 살릴 수 없어요</string>
    <string name="mypage_withdraw_warning_3_text">회원 탈퇴 후 7일간 재가입할 수 없어요</string>
    <string name="mypage_withdraw_warning_4_text">매너온도, 관심, 거래 후기 등 모든 활동 정보가 삭제되고, 2줄 이상 시 이렇게 적혀요</string>
    <string name="mypage_alarm_title_text">알림 설정</string>
    <string name="mypage_alarm_see_text">돌아보기</string>
    <string name="mypage_alarm_record_text">일주일 뒤 감정을 기록할 때 알 수 있어요</string>
    <string name="mypage_alarm_finish_text">목표종료</string>
    <string name="mypage_alarm_record_finish_text">목표가 끝나고 종료할 때 알 수 있어요</string>
    <string name="mypage_friend_title_text">친구 관리</string>
    <string name="friend_delete_text">친구를 삭제하시겠어요?</string>
    <string name="friend_delete_all_text">친구의 씀씀이를 더 이상 볼 수 없어요</string>
    <string name="mypage_logout_title_text">로그아웃 하시겠어요?</string>
    <string name="record_progress_percent">%d%%</string>
    <string name="record_progress_over">초과</string>
    <string name="record_week_consume_title_text">일주일 씀씀이</string>
    <string name="record_write_emotion_title_text">감정을 남겨주세요</string>
    <string name="record_no_write_emotion_text">기록한 씀씀이가 없어요</string>
    <string name="record_category_plus_text">+</string>
    <string name="record_category_limit_date">D-%d</string>
    <string name="record_write_emotion_subtitle_text">다시 돌아볼 씀씀이가 %d건 있어요</string>
    <string name="goal_more_title_text">목표 편집</string>
    <string name="remove_yes_text">삭제할래요</string>
    <string name="remove_no_text">아니요</string>
    <string name="modify_record_goal_title_text">목표</string>
    <string name="modify_record_goal_hint_text">목표를 선택해주세요</string>
    <string name="modify_record_date_title_text">소비날짜</string>
    <string name="modify_record_price_hint_text">50,000</string>
    <string name="modify_record_price_title_text">소비 금액</string>
    <string name="modify_record_content_title_text">소비 기록</string>
    <string name="modify_record_content_hint_text">소비에 대한 감상을 적어주세요 (150자)</string>
    <string name="modify_record_check_button_text">수정했어요</string>
    <string name="calendar_button_select_text">선택했어요</string>
    <string name="record_alarms_title_text">알람</string>
    <string name="back_button_text">back button</string>
    <string name="add_goal_title_text">시작이 반이에요!\n오늘부터 언제까지 해볼까요?</string>
    <string name="add_goal_subtitle_text">최대 한달까지 목표를 세울 수 있어요</string>
    <string name="add_goal_start_date_title_text">목표 시작 날짜</string>
    <string name="add_goal_start_date_text">목표 시작 날짜를 선택해주세요</string>
    <string name="ic_caledar_24_desc">캘린더 아이콘</string>
    <string name="add_goal_end_date_title_text">목표 종료 날짜</string>
    <string name="add_goal_end_date_hint_text">목표 종료 날짜를 선택해주세요</string>
    <string name="add_goal_check_button_text">선택했어요</string>
    <string name="add_goal_contents_title_text">행복한 소비를 위해\n목표를 만들어보세요!</string>
    <string name="add_goal_contents_subtitle_text">행복한 소비는 늘리고 후회되는 소비는 줄여봐요</string>
    <string name="add_goal_contents_category_title_text">목표 카테고리</string>
    <string name="add_goal_contents_category_hint_text">택시/건강 (8자)</string>
    <string name="add_goal_contents_promise_title_text">한 줄 다짐</string>
    <string name="add_goal_contents_promise_hint_text">걸어다니기/건강 관리에는 넉넉히 쓰자 (18자)</string>
    <string name="add_goal_contents_amount_title_text">목표 금액</string>
    <string name="add_goal_contents_amount_hint_text">50,000</string>
    <string name="add_goal_contents_check_button_text">작성했어요</string>
    <string name="add_goal_contents_private_title_text">목표 공개 설정</string>
    <string name="add_goal_contents_private_subtitle_text">친구들에게 이 목표를 공개할까요?</string>
    <string name="add_goal_complete_title_text">새로운 목표를\n추가했어요!</string>
    <string name="add_goal_complete_subtitle_text">목표를 달성할 수 있도록 포미가 응원할게요!</string>
    <string name="add_goal_complete_check_button_text">확인했어요</string>
    <string name="consume_record_title_text">어떤 소비를 하셨나요?</string>
    <string name="consume_record_subtitle_text">소비에 대한 간단한 기록을 남겨보세요</string>
    <string name="consume_record_goal_text">목표</string>
    <string name="consume_emotion_close_text">닫기</string>
    <string name="consume_emotion_title_text">소비한 순간의\n솔직한 감정을 남겨주세요</string>
    <string name="consume_emotion_subtitle_text">포미는 순간의 감정에 집중해\n한번 기록된 감정은 바꿀 수 없어요</string>
    <string name="consume_emotion_background">이모션 백그라운드</string>
    <string name="consume_happy_icon_desc">happy emotion</string>
    <string name="consume_emotion_happy_text">행복해요</string>
    <string name="consume_emotion_check_button_text">남겼어요</string>
    <string name="consume_emotion_what_text">모르겠어요</string>
    <string name="consume_complete_title_text">새로운 씀씀이 기록이\n추가되었어요!</string>
    <string name="consume_complete_subtitle_text">잊지 않고 기록해주셨네요! 정말 대단해요</string>
    <string name="consume_complete_check_button_text">확인했어요</string>
    <string name="consume_complete_image_desc">분홍 종이</string>
    <string name="alert_close_button_desc">닫힘 버튼</string>
    <string name="pink_pen_desc">핑크색 펜</string>
    <string name="alert_title_text">아직 돌아보지 않은 기록이 있어요!</string>
    <string name="alert_subtitle_text">씀씀이 기록 후 일주일 뒤에\n감정을 돌아보고 목표를 종료할 수 있어요</string>
    <string name="identifier_image_description">목표 보관함 identifier image</string>
    <string name="mypage_arrow_description">목표 보관함 다음으로 넘어가는 화살표</string>
</resources>