<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main">

        <ImageView
            android:id="@+id/splash_marshmallow_background_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/big_marshmallow_background"
            android:layout_marginTop="156dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/splash_marshmallow_background_image_description" />

        <ImageView
            android:id="@+id/splash_marshmallow_3d_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/marshmallow_white_3d"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/splash_marshmallow_background_iv"
            app:layout_constraintEnd_toEndOf="@id/splash_marshmallow_background_iv"
            app:layout_constraintTop_toTopOf="@id/splash_marshmallow_background_iv"
            app:layout_constraintBottom_toBottomOf="@id/splash_marshmallow_background_iv"
            android:contentDescription="@string/splash_marshmallow_3d_image_description" />

        <ImageView
            android:id="@+id/splash_logo_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo"
            app:layout_constraintTop_toBottomOf="@id/splash_marshmallow_background_iv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/splash_logo_image_description" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mashmallow_is_yours__1"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/splash_logo_iv"
            android:contentDescription="@string/splash_marshmallow_is_yours_image_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>