<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:padding="12dp">

        <ImageView
            android:id="@+id/alert_close_button_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="-6dp"
            android:contentDescription="@string/alert_close_button_desc"
            android:padding="6dp"
            android:src="@drawable/ic_cancel_24_grey4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/alert_image_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/pink_pen_desc"
            android:src="@drawable/pen_pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/alert_title_tv"
            style="@style/Pome.SemiBold.16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:letterSpacing="-0.03"
            android:paddingHorizontal="36dp"
            android:text="@string/alert_title_text"
            android:textColor="@color/grey_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alert_image_iv" />

        <TextView
            android:id="@+id/alert_subtitle_tv"
            style="@style/Pome.Medium.14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="7dp"
            android:gravity="center"
            android:letterSpacing="-0.03"
            android:lineSpacingExtra="3sp"
            android:paddingHorizontal="36dp"
            android:text="@string/alert_subtitle_text"
            android:textColor="@color/grey_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alert_title_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>