<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="goalCnt"
            type="Integer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mypage_main_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/mypage_main_cl">

        <ImageView
            android:id="@+id/mypage_main_logo_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:paddingStart="0dp"
            android:paddingEnd="14dp"
            android:src="@drawable/ic_mypage_main_logo"
            tools:src="@drawable/ic_mypage_main_logo"
            android:contentDescription="@string/identifier_image_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mypage_main_goal_tv"
            style="@style/Pome.SemiBold.16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/mypage_main_goal_text"
            tools:text="@string/mypage_main_goal_text"
            android:textColor="@color/grey_8"
            app:layout_constraintLeft_toRightOf="@id/mypage_main_logo_iv"
            app:layout_constraintTop_toTopOf="@id/mypage_main_logo_iv" />

        <TextView
            android:id="@+id/mypage_main_last_goal_tv"
            style="@style/Pome.Medium.14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@{@string/mypage_main_last_goal_text(goalCnt)}"
            tools:text="@string/mypage_main_last_goal_text"
            android:textColor="@color/grey_6"
            app:layout_constraintBottom_toBottomOf="@id/mypage_main_logo_iv"
            app:layout_constraintLeft_toRightOf="@id/mypage_main_logo_iv" />

        <ImageView
            android:id="@+id/mypage_ic_arrow_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_mypage_goal_arrow"
            android:contentDescription="@string/mypage_arrow_description"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/mypage_main_goal_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>